# pythia-sadic

./: .gitignore  README.md  pyproject.toml  requirements.txt
pythia/: masked_ddg_scan.py  pdb_utils.py  train_model.py
