[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythia-ddg"
version = "0.1.0"
description = "Masked token modeling for protein ddG prediction"
authors = [
    { name="Your Name", email="you@example.com" }
]
readme = "README.md"
license = "MIT"


dependencies = [
    "Bio",
    "joblib",
    "numpy",
    "pandas",
    "pytorch_lightning",
    "scipy",
    "torch",
    "torchmetrics",
    "tqdm"
]

[project.scripts]
pythia = "pythia.masked_ddg_scan:main"

[tool.setuptools]
packages = ["pythia"]